--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "engines": {
         "node": ">=5"
     },
-    "main": "index.js",
+    "main": "src/browser/main.js",
     "scripts": {
         "test": "electron-mocha",
         "start": "electron ."
